--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style/style.css" />
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -29,10 +29,14 @@
         <ul class="list-group">
           <li
             v-for="(todo, i) in todos"
-            :class="{'list-group-item d-flex align-item-center justify-content-between', text-decoration-line-through : !done}"
+            :class="{'list-group-item d-flex align-item-center justify-content-between', text-decoration-line-through : !todo.done}"
           >
             {{todo.text}}
-            <button type="button" class="btn-close"></button>
+            <button
+              type="button"
+              class="btn-close"
+              @click="removeFromLi(i)"
+            ></button>
           </li>
         </ul>
       </div>
