--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             ></button>
           </li>
         </ul>
+
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="cosa devo fare ancora?"
+          />
+          <span class="input-group-text">aggiungi</span>
+        </div>
       </div>
     </div>
   </body>
