--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             type="text"
             class="form-control"
             placeholder="cosa devo fare ancora?"
-            v-model="newTodo.text"
+            v-model="newTodo"
           />
           <button
             class="btn btn-outline-success"
